--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
     <BODY>
         <p>Welkom in my website powered by Docker!!</p>
         <p> Container is updated by using pipeline </p>
+        <p> This is the second container page for week3 </p>
     </BODY>
 </HTML>
